--- a/[CP] East Scarp NPCs/assets/Translations/ForTranslators.json
+++ b/[CP] East Scarp NPCs/assets/Translations/ForTranslators.json
@@ -340,7 +340,32 @@
                 "Parents_good": "Me and Dad don't always get along, but we love each other heaps! I bet it's like that with your family too.$1",
                 "Parents_personal": "Oh... I'm sorry... Dad always says my tongue's too fast for my brain. I'll try and get better and think first next time. Promise!$3",
                 "Parents_rude": "Sorry...$2",
-                "winter_Tue": "Winter's not a good time for birds, farmer @. It's hard to find food!#$b#Sometimes I sprinkle seed on the lawn. The cardinals love it!"
+                "winter_Tue": "Winter's not a good time for birds, farmer @. It's hard to find food!#$b#Sometimes I sprinkle seed on the lawn. The cardinals love it!",
+                //New Dialogue
+                "spring_Fri10":"Did you know baby birds - fledglings - can't fly when they first leave the nest?#$b#If you see any, and there's no predators around, they'll be okay. Don't touch them!$3",
+                "Sat10":"I've been reading my letters from Sora again. I hope he's okay. His life sounds pretty scary.#$b#I'm glad Dad and Mom and me back here before everything went horrible. I wish we'd brought Sora and his family too though.$2",
+                "Sun10":"Do you want to come beach-combing with us today? Dad lets me bring home shells to draw. I'm making a scrapbook of them!$1",
+                "summer_Mon10":"Maybe I'll let you read my journal one day, @.$3#$b#But not today.",
+                "summer_Tue10":"What's your favorite season, farmer @?#$b#Autumn's the prettiest, but I think my favorite's spring. Cos there's baby animals - and my birthday.$1",
+                "summer_Wed10":"Have you seen any woodpeckers? Did you know that a woodpecker pecks wood with about 1000 times the force of gravity?$3#$b#And they don't even get a headache! Isn't that wicked?$1",
+                "summer_Thu10":"Dad and I looked through old photo albums last night. My Mom and him looked really happy.#$b#I wish she hadn't died. But now it's my job to make him smile.#$b#But you make him smile too, farmer @. I'm glad you're his friend.$1",
+                "summer_Fri10":"Do you like swimming, farmer @? East Scarp has the best swimming beach! Sometimes the fish nibble you toes.$1#$b#Don't worry! They're not trying to eat you. They only eat dead skin. Gross, right?$3",
+                "summer_Sat10":"Sometimes Miss Rosa feeds bread and stuff to the ducks... I keep telling her she shouldn't.#$b#I don't think she likes me much.",
+                "summer_Sun10":"Dad says there used to be smugglers and pirates and stuff visit here. I wonder if they buried any treasure?",
+                "fall_Mon10":"Do you like leaf fights, farmer @? Last time Vinnie and Jas and I had a leaf fight, Vinnie dropped a worm down my neck.#$b#It tickled!$1",
+                "fall_Tue10":"I'm trying to teach Richie some new words. But he's very stubborn.#$b#He's old, you know. He belonged to my grandpa. I don't think he was a very nice man. Dad hardly ever talks about him at all.",
+                "fall_Wed10":"I've been learning so much in school! Miss Penny is a really good teacher.#$b#Although, she does say I sometimes challenge too much. But I only correct her if she gets things wrong. Cos isn't it better to know the real facts?",
+                "fall_Thu10":"I've been writing to my Nana! She's really nice. She lives in Grampleton with three cats and a lady called Theresa.#$b#She's an author, so I have to make sure my letters are good!$1",
+                "fall_Fri10":"I am VERY angry with Princess Midnight.$3#$b#She brought in a bird yesterday. Dad gave it antibiotics... but it was dead this morning.$2",
+                "fall_Sat10":"Did you know that penguins used to nest around here, farmer @?#$b#They don't so much anymore. The rock crabs ate their eggs.$2",
+                "fall_Sun10":"Do you think Dad and his brother will ever be friends again?#$b#I have to really, really ask lots of questions before Dad'll even talk about him.$2",
+                "winter_Mon10":"Are you friends with my Uncle? I think he needs more friends.$3#$b#But when I talk to him, he says things that make me feel sad. I don't think he likes me.$2",
+                "winter_Tue10":"Have you got any brothers or sisters, farmer @?#$b#Sometimes I wish I had a big brother like Vinnie does. Sam's so cool. He's a musician! Did you know that?$1",
+                "winter_Wed10":"Jas was talking about what she wanted to be when she grows up yesterday.#$b#I've been thinking. I want to work with animals, but being a vet is too sad. Maybe I could be an animal trainer in the circus?$3",
+                "winter_Thu10":"It's my Uncle's birthday soon. I wanted to give him a gift. Dad said I could draw him a picture.#$b#But what if he doesn't like it?$2",
+                "winter_Fri10":"Dad got called out to an emergency in the middle of the night. Don't worry, Miss Rosa came to keep me company.#$b#I like her. She's been to so many places! Maybe one day I'll travel the world too.$1",
+                "winter_Sat10":"Grandma gives the best Winter Star gift! This year I got a shimmery-shiny notebook!$!#$b#It's got a padlock on it too, so no-one can read my secrets.",
+                "winter_Sun10":"Sometimes we find rubbish on the beach. We always pick it up and throw it out.#$b#Cos if we don't, animals could eat it and get sick. That makes me sad.$2#$b#You don't litter, do you farmer @?$3",
             }
         },
         /*************************
@@ -623,7 +648,7 @@
         //     J O S E P H I N E
         **************************/
         {
-            "LogName": "Mainland Dialogue",
+            "LogName": "Dialogue",
             "Action": "EditData",
             "Target": "Characters/Dialogue/JosephineK",
             "Entries": {
@@ -676,7 +701,7 @@
         //    O L I V E R
         **************************/
         {
-            "LogName": "Mainland Dialogue",
+            "LogName": "Dialogue",
             "Action": "EditData",
             "Target": "Characters/Dialogue/OliverK",
             "Entries": {
@@ -745,7 +770,7 @@
         **************************/
         { // Note: Lexi is gender neutral by definition, if your language is gendered, please consider them female.
             //note that they intentionally speak in halting English.
-            "LogName": "Mainland Dialogue",
+            "LogName": "Dialogue",
             "Action": "EditData",
             "Target": "Characters/Dialogue/Leximonster",
             "Entries": {
